[package]
name = "dome_cloomnik"
description = "A framework for building DOME plugins using Rust"
version = "0.1.2"
authors = ["Chayim Refael Friedman <chayimfr@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/ChayimFriedman2/dome_cloomnik"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[dev-dependencies]
atoi = "0.4"

[[example]]
name = "first"
crate-type = ["cdylib"]

[[example]]
name = "audio"
crate-type = ["cdylib"]
